--- a/po/de.po
+++ b/po/de.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: libfm 0.1.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-14 23:43+0200\n"
-"PO-Revision-Date: 2012-07-09 11:40+0200\n"
-"Last-Translator: Christoph <christoph.wickert@googlemail.com>\n"
+"PO-Revision-Date: 2012-08-15 08:31+0200\n"
+"Last-Translator: Lutz <lthuns@opensuse.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -609,12 +609,13 @@ msgid "Modified"
 msgstr "Geändert"
 
 #: ../src/gtk/fm-folder-view.c:114
+#, fuzzy
 msgid "Create _New..."
-msgstr ""
+msgstr "_Neu..."
 
 #: ../src/gtk/fm-folder-view.c:115
 msgid "Folder"
-msgstr ""
+msgstr "Ordner"
 
 #: ../src/gtk/fm-folder-view.c:118
 #, fuzzy
@@ -627,16 +628,18 @@ msgid "Shortcut"
 msgstr "Verknüpfungen"
 
 #: ../src/gtk/fm-folder-view.c:130
+#, fuzzy
 msgid "_Invert Selection"
-msgstr ""
+msgstr "Auswahl _umkehren"
 
 #: ../src/gtk/fm-folder-view.c:131
 msgid "_Sort Files"
-msgstr ""
+msgstr "Dateien _sortieren"
 
 #: ../src/gtk/fm-folder-view.c:143
+#, fuzzy
 msgid "Show _Hidden"
-msgstr ""
+msgstr "_Versteckte Dateien anzeigen"
 
 #: ../src/gtk/fm-folder-view.c:154
 #, fuzzy
@@ -644,8 +647,9 @@ msgid "By _Name"
 msgstr "Name"
 
 #: ../src/gtk/fm-folder-view.c:155
+#, fuzzy
 msgid "By _Modification Time"
-msgstr ""
+msgstr "Letzte Än_derung"
 
 #: ../src/gtk/fm-folder-view.c:156
 #, fuzzy
@@ -655,19 +659,19 @@ msgstr "Größe"
 #: ../src/gtk/fm-folder-view.c:157
 #, fuzzy
 msgid "By File _Type"
-msgstr "<b>Dateityp:</b>"
+msgstr "Dateityp"
 
 #: ../src/gtk/fm-folder-view.c:673
 msgid "Enter a name for the newly created folder:"
-msgstr ""
+msgstr "Geben Sie einen Namen für den neu erstellten Ordner an:"
 
 #: ../src/gtk/fm-folder-view.c:675
 msgid "Enter a name for the newly created file:"
-msgstr ""
+msgstr "Geben Sie einen Namen für die neu erstellte Datei an:"
 
 #: ../src/gtk/fm-folder-view.c:676
 msgid "Create New..."
-msgstr ""
+msgstr "Neu..."
 
 #: ../src/gtk/fm-folder-view.c:676
 #, fuzzy
@@ -676,11 +680,12 @@ msgstr "Netzwerk"
 
 #: ../src/gtk/fm-folder-view.c:768
 msgid "Error, lxshortcut not installed"
-msgstr ""
+msgstr "Fehler, lxshortcut ist nicht installiert"
 
 #: ../src/gtk/fm-folder-view.c:773
+#, fuzzy
 msgid "Failed to start lxshortcut"
-msgstr ""
+msgstr "Konnte lxshortcut nicht starten"
 
 #: ../src/gtk/fm-app-menu-view.c:157
 msgid "Installed Applications"
