--- a/po/et.po
+++ b/po/et.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-14 23:43+0200\n"
-"PO-Revision-Date: 2012-07-07 13:34+0200\n"
+"PO-Revision-Date: 2012-08-16 21:22+0200\n"
 "Last-Translator: Anari <anari.jalakas@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: et\n"
@@ -89,7 +89,7 @@ msgstr "Faili nimi:"
 
 #: ../data/ui/ask-rename.glade.h:7
 msgid "Apply this option to all existing files"
-msgstr "Teosta sama toiming kõigi failidega"
+msgstr "Sama toimingu teostamine kõigi failidega"
 
 #: ../data/ui/ask-rename.glade.h:8
 msgid "_Skip"
@@ -603,77 +603,71 @@ msgstr "Muudetud"
 
 #: ../src/gtk/fm-folder-view.c:114
 msgid "Create _New..."
-msgstr ""
+msgstr "Loo _Uus..."
 
 #: ../src/gtk/fm-folder-view.c:115
 msgid "Folder"
-msgstr ""
+msgstr "Kaust"
 
 #: ../src/gtk/fm-folder-view.c:118
-#, fuzzy
 msgid "Blank File"
-msgstr "Tühi MO ketas"
+msgstr "Tühi fail"
 
 #: ../src/gtk/fm-folder-view.c:119
-#, fuzzy
 msgid "Shortcut"
-msgstr "Otseteed"
+msgstr "Otsetee"
 
 #: ../src/gtk/fm-folder-view.c:130
 msgid "_Invert Selection"
-msgstr ""
+msgstr "_Pööra valik"
 
 #: ../src/gtk/fm-folder-view.c:131
 msgid "_Sort Files"
-msgstr ""
+msgstr "_Sorteeri faile"
 
 #: ../src/gtk/fm-folder-view.c:143
 msgid "Show _Hidden"
-msgstr ""
+msgstr "Näita _peidetud"
 
 #: ../src/gtk/fm-folder-view.c:154
-#, fuzzy
 msgid "By _Name"
-msgstr "Nimi"
+msgstr "_Nime järgi"
 
 #: ../src/gtk/fm-folder-view.c:155
 msgid "By _Modification Time"
-msgstr ""
+msgstr "_Muutmisaja järgi"
 
 #: ../src/gtk/fm-folder-view.c:156
-#, fuzzy
 msgid "By _Size"
-msgstr "Suurus"
+msgstr "_Suuruse järgi"
 
 #: ../src/gtk/fm-folder-view.c:157
-#, fuzzy
 msgid "By File _Type"
-msgstr "<b>Failitüüp:</b>"
+msgstr "_Failitüübi järgi"
 
 #: ../src/gtk/fm-folder-view.c:673
 msgid "Enter a name for the newly created folder:"
-msgstr ""
+msgstr "Sisesta loodava kausta nimi:"
 
 #: ../src/gtk/fm-folder-view.c:675
 msgid "Enter a name for the newly created file:"
-msgstr ""
+msgstr "Sisesta loodava faili nimi:"
 
 #: ../src/gtk/fm-folder-view.c:676
 msgid "Create New..."
-msgstr ""
+msgstr "Loo uus..."
 
 #: ../src/gtk/fm-folder-view.c:676
-#, fuzzy
 msgid "New"
-msgstr "Võrk"
+msgstr "Uus"
 
 #: ../src/gtk/fm-folder-view.c:768
 msgid "Error, lxshortcut not installed"
-msgstr ""
+msgstr "Viga, \"lxshortcut\" on paigaldamata"
 
 #: ../src/gtk/fm-folder-view.c:773
 msgid "Failed to start lxshortcut"
-msgstr ""
+msgstr "Programmi \"lxshortcut\" käivitamine ebaõnnestus"
 
 #: ../src/gtk/fm-app-menu-view.c:157
 msgid "Installed Applications"
@@ -701,7 +695,7 @@ msgstr "Vajab süsteemihaldaja kasutusõigusi."
 
 #: ../src/gtk/fm-gtk-utils.c:643
 msgid "Do you want to move the selected files to trash can?"
-msgstr "Kas soovid valitud failid prügikasti tõsta?"
+msgstr "Kas tõsta valitud failid prügikasti?"
 
 #: ../src/gtk/fm-gtk-utils.c:664
 msgid "Do you want to delete the selected files?"
